@@ -21,11 +21,11 @@ public class Version {
 
 	final public static int minor = 5;
 
-	final public static int patchLevel = 0;
+	final public static int patchLevel = 1;
 
-	final public static String maturity = "alpha";
+	final public static String maturity = "(development)";
 
-	final public static String date = "2009/09/21";
+	final public static String date = "2009/12/07";
 
 	final public static String extension = (maturity == null ? "" : " "
             + maturity)
