@@ -1,3 +1,7 @@
+3dt 0.5.1:
+
+2009-12-07: Delaney symbol files with the .tgs extension are now recognized.
+
 3dt 0.5.0:
 
 2009-09-11: Added an option for using primitive unit cells.
